# ChangeLog for media-libs/libifp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libifp/ChangeLog,v 1.10 2007/02/22 01:55:21 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  18 Jul 2006; Joshua Jackson <tsunam@gentoo.org> libifp-1.0.0.2.ebuild:
  Stable x86 for amarok #139095

  08 Jul 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  libifp-1.0.0.2.ebuild:
  stable on ppc (Bug #139095)

  04 Jul 2006; Markus Rothe <corsair@gentoo.org> libifp-1.0.0.2.ebuild:
  Stable on ppc64; bug #139095

  17 Apr 2006; Markus Rothe <corsair@gentoo.org> libifp-1.0.0.2.ebuild:
  Added ~ppc64; bug #129409

  16 Apr 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  libifp-1.0.0.2.ebuild:
  mark ~ppc -- library compiles and links ok, and ppc is a supported platform
  upstream so I'm giving it the benefit of the doubt (Bug #129409)

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> libifp-1.0.0.2.ebuild:
  Mark 1.0.0.2 ~ia64

  27 Feb 2006; Patrick McLean <chutzpah@gentoo.org> libifp-1.0.0.2.ebuild:
  Stable on amd64.

  06 Feb 2006; Patrick McLean <chutzpah@gentoo.org> libifp-1.0.0.2.ebuild:
  Fix dependency syntax (bug #121742).

*libifp-1.0.0.2 (23 Jan 2006)

  23 Jan 2006; Patrick McLean <chutzpah@gentoo.org> +metadata.xml, +libifp-1.0.0.2.ebuild:
  Initial version, ebuild submitted by Przemyslaw Maciag <p_maciag@wp.pl>.
