@@ -1,4 +1,6 @@
+AUX libifp.fdi 10137 RMD160 7f94f60679975f81118649fdd6a8a71076796a5a SHA1 b4f9b7a1126e5be1fb75110ee307961b5c29d35c SHA256 fbd71a98b37cebe9baef086345eb0d1bb89728ba34fbaaa938bbcc9a004c1ed3
 DIST libifp-1.0.0.2.tar.gz 358550 RMD160 09c1d09eeaa8c6b092dd7e22e1229f84c7a2790c SHA1 3bd2808f8b5fce9234764b84bc6f65d666381086 SHA256 3b8fa50b9425b660285484eb42bad3f736f0aecc6a790c5160da276558ebfcee
+EBUILD libifp-1.0.0.2-r1.ebuild 1528 RMD160 644534e7667a914076e6d6d9f9340addf9e4c43c SHA1 7c8d2cabb5336a2a919b020afaa286a98695f7b1 SHA256 508a531f6cf3d8a374bf6419a0a139a6512698726fd51e9e78448fdef0c8981b
 EBUILD libifp-1.0.0.2.ebuild 1366 RMD160 904d84fd4d4d196c50d0c60f5829b255ed9a1b39 SHA1 6281eeb9ec3ad2fc874ee074ef4ca466c64b5a9f SHA256 654f623294001d379373063d22b5cb0ef4193b17851a4fa5206c9f5b9ec56097
-MISC ChangeLog 1460 RMD160 39a7efdfb871a2e707826781b78bbb347de9cd10 SHA1 935c7a240058eab9f8be36c17cfcf6affa102371 SHA256 2638ddd9a76ab969a9637fafb05352a1d91e7628bbe9eb42be439674fd908028
+MISC ChangeLog 1583 RMD160 4952e1bfc82750f85bfe811f8725299431ef5984 SHA1 a3cf746bc1454af39788cbb699415876bb579f33 SHA256 3235ac80e9c72cf18bde04f34eb6bd0df4f5dfc46baec0f766166332eb48f05a
 MISC metadata.xml 473 RMD160 725527f90df5a46fccf10df7e8181bf4cf7e09bf SHA1 7547148cbd7333f1c73694bc8e46965c5d1f814d SHA256 00f5154fe5be1dd160342daf3d69b89d72e3d31eefee3515bff24a73a9c9253f
