@@ -1,0 +1,140 @@
+<?xml version="1.0" encoding="UTF-8"?> <!-- -*- SGML -*- --> 
+<!-- Copyright 2007-2008 Jeff Mitchell, mitchell@kde.org, licensed under GPLv2+ -->
+<deviceinfo version="0.2">
+  <device>
+
+    <match key="info.bus" string="usb">
+      <match key="usb.vendor_id" int="0x4102">
+      <!-- iRiver -->
+        <match key="usb.product_id" int="0x1001">
+        <!-- iFP-100 Series Device -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">iFP-100 Series Device</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver iFP-100 Series Device</merge>
+        </match>
+        <match key="usb.product_id" int="0x1003">
+        <!-- iFP-300 Series Device -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">iFP-300 Series Device</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver iFP-300 Series Device</merge>
+        </match>
+        <match key="usb.product_id" int="0x1005">
+        <!-- iFP-500 Series Device -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">iFP-500 Series Device</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver iFP-500 Series Device</merge>
+        </match>
+        <match key="usb.product_id" int="0x1007">
+        <!-- iFP-700 Series Device -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">iFP-700 Series Device</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver iFP-700 Series Device</merge>
+        </match>
+        <match key="usb.product_id" int="0x1008">
+        <!-- iFP-800 Series Device -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">iFP-800 Series Device</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver iFP-800 Series Device</merge>
+        </match>
+        <match key="usb.product_id" int="0x1009">
+        <!-- iFP-900 Series Device -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">iFP-900 Series Device</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver iFP-900 Series Device</merge>
+        </match>
+        <match key="usb.product_id" int="0x1010">
+        <!-- iFP-1000 Series Device -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">iFP-1000 Series Device</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver iFP-1000 Series Device</merge>
+        </match>
+        <match key="usb.product_id" int="0x1011">
+        <!-- N10 -->
+          <addset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">N10</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver N10</merge>
+        </match>
+        <match key="usb.product_id" int="0x1113">
+        <!-- T10 -->
+          <adddset key="info.capabilities" type="strlist">portable_audio_player</addset>
+          <merge key="info.vendor" type="string">iRiver</merge>
+          <merge key="info.product" type="string">T10</merge>
+          <merge key="info.category" type="string">portable_audio_player</merge>
+          <merge key="portable_audio_player.access_method" type="string">user</merge>
+          <addset key="portable_audio_player.access_method.protocols" type="strlist">iriver</addset>
+          <append key="portable_audio_player.access_method.drivers" type="strlist">libifp</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/mpeg</append>
+          <append key="portable_audio_player.output_formats" type="strlist">audio/x-ms-wma</append>
+          <merge key="portable_audio_player.libifp.protocol" type="string">iriver</merge>
+          <merge key="portable_audio_player.libifp.name" type="string">iRiver T10</merge>
+        </match>
+      </match>
+    </match>
+
+  </device>
+</deviceinfo>
+
